Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -464,22 +464,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys"
+       "list"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pyeongchang_keys = cities[-1].keys()\n",
+    "pyeongchang_keys = list(cities[-1].keys())\n",
     "\n",
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n",
